fix(dropdown): Moved Tooltip into a Portal To Avoid overflow: none.

--- a/core/frontend/css/index.scss
+++ b/core/frontend/css/index.scss
@@ -9,7 +9,7 @@
   font-weight: normal;
 }
 
-body {
+body, #app {
   position: relative;
 
   padding: 0;
